src/components/Sidebar/index.scss
.nav{
  position: fixed;
  background: transparent;
  min-width: 100vw;
  z-index: 0;
  transition: all 0.5s ease 0.5s;

  @media only screen and (max-width: 1366px) {
    z-index: 3;
  }

  .header{
    @media only screen and (min-width: 1366px) {
      display: flex;
      width: 1280px;
      margin: auto;
      justify-content: space-between;
      z-index: 4;
    }
    
    .adjuster {
      @media only screen and (min-width: 1366px) {
        display: block;
        width: 100px;
        height: 100px;
      }

      @media only screen and (max-width: 1366px) {
        display: none;
      }
    }

    .nav-bar {
      z-index: 4;
      @media only screen and (min-width: 1366px) {
        padding: 40px 0px;
      }
  
      @media only screen and (max-width: 1366px) {
        background: #BC8F72;
        width: 100%;
        height: 60px;
        display: flex;
        justify-content: space-between;
      }
  
      .logo {
  
        img {
          @media only screen and (min-width: 1366px) {
            width: 60px;
            height: auto;
          }
  
          @media only screen and (max-width: 1366px) {
            width: auto;
            height: 44px;
            margin: 0 5vw;
            background-color: #FFF;
          }
          display: block;
        }

        .open {
          background-color: #FFF;
          transition: all 1s ease;
        }
      }
  
      .burger-close {
        margin: 6px -6px;
        color:#BC8F72;

        @media only screen and (max-width: 1366px) {
          padding: 0 5vw;
          margin: 6px 8px;
        }
      }

      .burger-open {
        margin: 6px 0px;
        color:#FFF;

        @media only screen and (max-width: 1366px) {
          margin: 6px 8px;
          padding: 0 5vw;
        }
      }

      .circle-close {
        margin-top: 4px;
        width: 40px;
        height: 40px;
        border-radius: 25px;
        
        align-items: center;

        @media only screen and (max-width: 1366px) {
          background: #FFF;
        }
      

        .burger-container {
          position: relative;
          top:-3px;
          left: -4px
        }
      }
      
    }
  }
  

  .pager-enter {
    opacity: 0;
    transform: translateY(100%);
  }
  .pager-enter-active {
    opacity: 1;
    transform: translateY(0);
    transition: opacity 500ms, transform 500ms;
  }
  .pager-exit {
    opacity: 1;
    transform: translateY(0);
  }
  .pager-exit-active {
    opacity: 0;
    transform: translateY(100%);
    transition: opacity 500ms, transform 500ms;
  }
  
  .page {
    @media only screen and (min-width: 1366px) {
      margin-top: -252px;
      padding: 100px 0px 0px;
    }
    @media only screen and (max-width: 1366px) {
      padding: 0px;
    }
    position: relative;
    left: 0;
    background-color: #BC8F72;
    min-width: 100vw;
    max-height: 100vh;
    overflow-y: auto;
    display: block;
    transition: all 0.5s ease;
    
    &.open {
      top: 0;
    }

    &.close {
      top: 110vh;
      z-index: 4;
    }
    

    .menu {
      min-height: 100vh;
      margin: auto;
      margin-top: 60px;
      max-width: 1120px;
      overflow: hidden;
      
      .header {
        font-size: 12px;
        font-family: 'Lexend';
        text-transform: uppercase;
        letter-spacing: 12px;
        color: #FFF;
        font-weight: 100;
        margin: 0px 30px 80px;

        @media only screen and (max-width: 1366px) {
          margin: 0px 30px 40px;
        }
      }
    }

    .elements {
      margin: 20px 0px;

      @media only screen and (min-width: 768px) {
        display: flex;
      }

      .navigator {
        width: 40%;

        @media only screen and (max-width: 768px) {
          width: 100%;
        }
      }

      .details {
        width: 40%;
        margin: 0px 40px;

        @media only screen and (max-width: 768px) {
          width: 80%;
          margin: 100px 40px;
        }

        .heading {
          font-family: 'NotoSans-Medium';
          color: #FFF;
          font-size: 24px;
          margin: 0px 0px 60px;
          line-height: 28px;
        }

        .subheading {
          font-family: 'Quicksand';
          color: #FFF;
          font-size: 16px;
          margin: 0px 0px 60px;
          line-height: 28px;
          letter-spacing: 1px;
        }

        .signature {
          font-family: 'Bathilda';
          color: rgb(105, 42, 42);
          letter-spacing: 1px;
          font-weight: 100;
          font-variant: normal;
          font-size: 52px;

          .hspace {
            font-size: 20px;
          }
        }
      }

      .socials {
        margin-top: 60px;
        display: flex;
        width: 200px;
        justify-content: space-between;
        font-size: large;
        color: #FFF;
        margin: 100px 0px;

        @media only screen and (max-width: 512px) {
          margin-top: 30px;
        }

        a {
          color: inherit;
        }
        a:hover {
          font-size: xx-large;
          text-shadow: 2px 2px 8px #000;
          margin-top: -5px;
        }

        .facebook:hover {
          color:#316FF6;
        }
        .linkedin:hover {
          color:#0077b5;
        }
        .github:hover {
          color:#2b3137;
        }
        .whatsapp:hover {
          color:#075e54;
        }
        .youtube:hover {
          color:#CD201F;
        }
      }
    }

    .container {
      width: auto;
      margin: 0px 20px 20px;
      display: flex;
    }

    .navlink {
      text-decoration: none;
      font-family: 'Lexend';
      font-size: 38px;
      color: #FFF;
      padding: 0px 10px;
    }

    .underline {
      transition: all 0.5s ease;
      height: 12px;
      background-color: rgb(105, 42, 42);
      margin: -16px -5px 0px;

      &.active {
        width: calc(100% + 10px);
      }

      &.hidden {
        width: 0%;
      }
    }
    
    .active {
      color: red;
    }
  }

  .page-none {
    display: none;
  }
}

.nav.onTop {
  z-index: 3;
  transition: all 0s;

  @media only screen and (min-width: 1366px) {
    z-index: 3;
  }
}

